--- a/docker-compose.dist.yml
+++ b/docker-compose.dist.yml
@@ -2,13 +2,29 @@ version: "3.9"
 
 services:
 
+#  server:
+#    restart: "unless-stopped"
+#    build:
+#      context: ./server
+#    volumes:
+#      - ./config.yml/app/config.yml
+#    ports:
+#      - "127.0.0.1:5000:5000"
+#    deploy:
+#      resources:
+#        reservations:
+#          devices:
+#            - driver: nvidia
+#              count: 1
+#              capabilities: [ gpu ]
+
   whisper:
     restart: "unless-stopped"
     build:
       context: ./whisper
       args:
         # В качестве версии можно указать: тег, ветку или коммит
-        - WHISPER_VERSION=master
+        - WHISPER_VERSION=v1.6.2
     volumes:
       - ./models:/app/models
     ports:
