--- a/config.dist.yml
+++ b/config.dist.yml
@@ -1,18 +1,18 @@
 models:
-  tiny:
+  base:
     owned_by: organization-owner
     endpoints:
-    - http://whisper01:9000/inference
-    - http://whisper02:9000/inference
-  #base:
-  #  owned_by: organization-owner
-  #  endpoints:
-  #  - http://whisper03:9000/inference
-  #large-v2:
+    - http://whisper:9000/inference
+  #tiny:
   #  owned_by: organization-owner
   #  endpoints:
   #  - http://whisper01:9000/inference
   #  - http://whisper02:9000/inference
+  #large-v2:
+  #  owned_by: organization-owner
+  #  endpoints:
+  #  - http://whisper01:9001/inference
+  #  - http://whisper02:9001/inference
   #large-v3:
   #  owned_by: organization-owner
   #  endpoints:
