--- a/config.dist.yml
+++ b/config.dist.yml
@@ -2,18 +2,17 @@ models:
   base:
     owned_by: organization-owner
     endpoints:
-    - http://whisper:9000/inference
+      - base_url: http://whisper:9000/inference
   #tiny:
   #  owned_by: organization-owner
   #  endpoints:
-  #  - http://whisper01:9000/inference
-  #  - http://whisper02:9000/inference
+  #    - base_url: http://whisper01:9000/inference
   #large-v2:
   #  owned_by: organization-owner
   #  endpoints:
-  #  - http://whisper01:9001/inference
-  #  - http://whisper02:9001/inference
+  #    - base_url: http://whisper02:9000/inference
+  #    - base_url: http://whisper03:9000/inference
   #large-v3:
   #  owned_by: organization-owner
   #  endpoints:
-  #  - http://whisper03:9000/inference
+  #    - base_url: http://whisper04:9000/inference
