--- a/whisper/Dockerfile.intel_mkl
+++ b/whisper/Dockerfile.intel_mkl
@@ -13,6 +13,9 @@ ARG WHISPER_VERSION="master"
 #    tail --lines=1 | cut --delimiter='/' --fields=3
 # For details see here: https://stackoverflow.com/questions/8932389/git-shallow-clone-to-specific-tag)
 
+ARG WHISPER_MKL=1
+ENV WHISPER_MKL=${WHISPER_MKL}
+
 # Install dependencies
 RUN set -xe \
  && apt update -q \
@@ -35,7 +38,8 @@ RUN git clone --branch "$WHISPER_VERSION" --depth 1 "$WHISPER_REPO"
 # Build whisper.cpp with MKL support
 WORKDIR /app/whisper.cpp
 RUN . /opt/intel/oneapi/setvars.sh \
-  && WHISPER_MKL=1 make -j$(nproc) server quantize
+ && cmake -B build \
+ && cmake --build build --config Release
 
 FROM ubuntu:22.04
 WORKDIR /app
@@ -62,8 +66,12 @@ RUN set -xe \
 
 # Copy compiled tools
 COPY --from=builder /app/whisper.cpp/models/download-ggml-model.sh .
-COPY --from=builder /app/whisper.cpp/server .
-COPY --from=builder /app/whisper.cpp/quantize .
+COPY --from=builder /app/whisper.cpp/build/src/*.so /usr/lib/x86_64-linux-gnu
+COPY --from=builder /app/whisper.cpp/build/src/*.so.* /usr/lib/x86_64-linux-gnu
+COPY --from=builder /app/whisper.cpp/build/ggml/src/*.so /usr/lib/x86_64-linux-gnu
+COPY --from=builder /app/whisper.cpp/build/bin/whisper-server .
+COPY --from=builder /app/whisper.cpp/build/bin/whisper-cli .
+COPY --from=builder /app/whisper.cpp/build/bin/quantize .
 
 # Initialize entrypoint
 ADD entrypoint.sh .
