--- a/whisper/Dockerfile
+++ b/whisper/Dockerfile
@@ -1,9 +1,9 @@
 ARG UBUNTU_VERSION=22.04
 ARG CUDA_VERSION=12.6.1
-ARG BASE_CUDA_DEV_CONTAINER=nvidia/cuda:${CUDA_VERSION}-devel-ubuntu${UBUNTU_VERSION}
+ARG BASE_CUDA_DEVEL_CONTAINER=nvidia/cuda:${CUDA_VERSION}-devel-ubuntu${UBUNTU_VERSION}
 ARG BASE_CUDA_RUNTIME_CONTAINER=nvidia/cuda:${CUDA_VERSION}-runtime-ubuntu${UBUNTU_VERSION}
 
-FROM ${BASE_CUDA_DEV_CONTAINER} as builder
+FROM ${BASE_CUDA_DEVEL_CONTAINER} as builder
 WORKDIR /app
 
 # Repo with sources
