--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,7 +18,7 @@ jobs:
         id: docker_hub_tags
         run: |
           url="https://registry.hub.docker.com/v2/repositories/${owner}/${repo}/tags/"
-          result=$(curl -s "$url" | jq '."results"[]["name"]' | grep -v "latest" | grep -v "cuda")
+          result=$(curl -s "$url" | jq '."results"[]["name"]' | grep -v "latest")
           sorted_result=$(echo "$result" | sed 's/\"//g' | sort -V | tr '\n' ',')
           echo "::set-output name=result::$sorted_result"
         env:
@@ -30,7 +30,7 @@ jobs:
         run: |
           url="https://api.github.com/repos/${owner}/${repo}/releases"
           result=$(curl -L -s "$url" | jq '.[]["name"]' | grep '^b*')
-          sorted_result=$(echo "$result" | sed 's/\"//g' | sort -V | tail -n 2 | tr '\n' ',')
+          sorted_result=$(echo "$result" | sed 's/\"//g' | sort -V | tail -n 5 | tr '\n' ',')
           echo "::set-output name=result::$sorted_result"
         env:
           owner: ggerganov
@@ -59,7 +59,7 @@ jobs:
           for tag in "${github_releases_array[@]}"; do
             if [[ ! " ${docker_hub_tags_array[*]} " =~ " $tag " ]]; then
               echo "Missing tag: $tag"
-              docker buildx build --builder=my_builder --push --platform=linux/amd64 --build-arg WHISPER_VERSION=${tag} --tag=${owner}/${repo}:${tag}-cuda ./whisper.cpp/
+              docker buildx build --builder=my_builder --push --platform=linux/amd64 --build-arg WHISPER_VERSION=${tag} --tag=${owner}/${repo}:${tag} --tag=${owner}/${repo}:${tag}-cuda ./whisper.cpp/
               docker buildx build --builder=my_builder --push --platform=linux/amd64 --file ./llama.cpp/Dockerfile.intel --build-arg WHISPER_VERSION=${tag} --tag=${owner}/${repo}:${tag}-intel ./whisper.cpp/
               latest_tag=$tag
             fi
@@ -68,8 +68,8 @@ jobs:
           # Tagging the latest version as 'latest'
           if [ ! -z "$latest_tag" ]; then
             echo "Tagging the latest version as 'latest': $latest_tag"
-            docker buildx build --builder=my_builder --push --platform=linux/amd64 --build-arg WHISPER_VERSION=${tag} --tag=${owner}/${repo}:latest --tag=${owner}/${repo}:latest-cuda ./whisper.cpp/
-            docker buildx build --builder=my_builder --push --platform=linux/amd64 --file ./llama.cpp/Dockerfile.intel --build-arg WHISPER_VERSION=${tag} --tag=${owner}/${repo}:latest-intel ./whisper.cpp/
+            docker buildx build --builder=my_builder --push --platform=linux/amd64 --build-arg WHISPER_VERSION=${tag} --tag=${owner}/${repo}:latest --tag=${owner}/${repo}:cuda ./whisper.cpp/
+            docker buildx build --builder=my_builder --push --platform=linux/amd64 --file ./llama.cpp/Dockerfile.intel --build-arg WHISPER_VERSION=${tag} --tag=${owner}/${repo}:intel ./whisper.cpp/
           fi
         env:
           owner: evilfreelancer
