Add GPU configuration to Docker Compose and update YAML settings

--- a/config.dist.yml
+++ b/config.dist.yml
@@ -3,6 +3,7 @@ models:
     owned_by: organization-owner
     endpoints:
       - base_url: http://whisper:9000/inference
+        gpu: 0
   #tiny:
   #  owned_by: organization-owner
   #  endpoints:
