Set default APP_TIMEOUT in entrypoint.sh and add environment variable in docker-compose.dist.yml

--- a/docker-compose.dist.yml
+++ b/docker-compose.dist.yml
@@ -24,6 +24,8 @@ services:
       - ./config.yml:/app/config.yml
     ports:
       - "127.0.0.1:5000:5000"
+    environment:
+      APP_TIMEOUT: 3600
     deploy:
       resources:
         reservations:
